# nova-flux-nn

./: .gitignore  .pre-commit-config.yaml  All in One-Copy2.ipynb  All in One-Minerva.ipynb  All in One.ipynb  Distribution Matching.ipynb  Flux from MINERvA data.ipynb  Flux from MINERvA data.ipynb.textClipping  MINERvA (Truncated Decay)  MINERvA (Untruncated Decay)  MINERvA_Neutrino_fluxes.csv  ND All  ND Spectrum 2.1-Copy1.ipynb  ND flux data.csv  Neural Net V2.ipynb  Off Axis Spectrum.ipynb  Recap 24th Apr.docx  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  bin_centers.npy  dm_sqs.npy  flux_2.npy  nu_e_2.npy  osc_params.npy  pyproject.toml  scratchpad.ipynb  sin_sqs.npy
.github/workflows/: ci.yml
.ipynb_checkpoints/: All in One-checkpoint.ipynb  Distribution Matching-checkpoint.ipynb  Flux from MINERvA data-checkpoint.ipynb  ND Spectrum 2.0-checkpoint.ipynb  ND Spectrum 2.1-checkpoint.ipynb  Neural Net V1-checkpoint.ipynb  Neural Net V2-checkpoint.ipynb  Off Axis Spectrum-checkpoint.ipynb
configs/: default.yaml
nova-nn/: Makefile  README.md
nova-nn/docs/: USAGE.md
nova-nn/examples/: quickstart.py
nova-nn/src/nova_nn/: eval.py  layers.py  train.py
src/nova_nn/: __init__.py  data.py  model.py
tests/: test_combine_layer.py
