
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-nn"
version = "0.1.0"
description = "ND→FD spectrum prediction with a serializable Keras layer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
    "tensorflow>=2.16,<3",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5.0",
    "black>=24.3.0",
    "mypy>=1.10.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
